Changelog
=========

1.7.5 (unreleased)
------------------

- Nothing changed yet.


1.7.4 (2015-10-30)
------------------

- backy config: generate valid config file even when there are no jobs present
  (#13456).
- Generalize bacula purge code, rename localconfig-bacula-purge-stamps to
  localconfig-bacula-purge (#13456).


1.7.3 (2015-09-21)
------------------

- localconfig-backy writes backy.conf from directory ENC data (#13456).


1.7.2 (2015-07-30)
------------------

- Delete unused pools (no RG or RG contains no VMs) (#14997).


1.7.1 (2015-07-22)
------------------

- Mark maintenance jobs as SUCCESS (but don't run the script) is `applicable`
  returns with exit code 1 (#16413).

- Fix bug which could leave pgp_num permanntly lower than pg_num (#16711).

- Refactor maintenance: introduce global prepare/finish scripts that
  can be run when maintenance starts or finishes. This allows evacuating
  KVM hosts or outmigrating Ceph OSDs before starting maintenance,
  rebooting, etc. This decouples the jobs' awareness of its environment -
  maitenance jobs can expect that a machine may get interrupted. The prepare
  and finish scripts are required to be careful to stop maintenance and
  put things back in order when maintenance is finished (#13755).

- Protect against users re-registering local Unix usernames (like root, apache,
  or others) without us noticing. Currently you could still register them but
  things would break on your machines anyway.


1.7.0 (2015-07-01)
------------------

- Automatic Kibana configuration (#16002).
- Parallelize localconfig-kvm-init (#14920).


1.6.8 (2015-06-03)
------------------

- Implement late autosigning when VMs are brought up with race conditions.


1.6.7 (2015-06-02)
------------------

- Delete non-existent Ceph pools if they contain no images (#14997).
- Remove now outdated Qemu/KVM management code as this has all moved
  to fc.qemu.

1.6.6 (2015-04-10)
------------------
